--- a/HTML e CSS3 _ Parte 1/contato.html
+++ b/HTML e CSS3 _ Parte 1/contato.html
@@ -25,21 +25,68 @@
     <main>
         <form>
             <label for="nomesobrenome">Nome e sobrenome</label>
-            <input type="texto" id = "nomesobrenome">
+            <input type="texto" id = "nomesobrenome" class="input-padrao" required >
 
             <label for="email">Email</label>
-            <input type="texto" id = "email">
+            <input type="email" id = "email" class="input-padrao" required placeholder="Ex:roger@dominio.com">
 
             <label for="telefone">Telefone</label>
-            <input type="texto" id = "telefone">
+            <input type="tel" id = "telefone" class="input-padrao" required placeholder="(XX)XXXXX_XXXX">
 
-            <input type="submit" value="Enviar formulário">
+             <label for = "Mensagem">Mensagem</label>
+            <textarea id ="mensagem" class="input-padrao"></textarea>
+         <fieldset>
+            <legend>Como prefere o nosso contato?</legend>
+            <label for = "radio-email"><input type="radio" name="contato"  
+            value="email" id="radio-email">Email</label>
+           
+            <label for = "radio-telefone"><input type="radio" name="contato" 
+            value="telefone" id="radio-telefone">Telefone</label>
 
+            <label for = "radio-watsApp"><input type="radio"name="contato" 
+            value="WatsApp" id="radio-watsApp" checked>WatsApp</label>
+         </fieldset>
+        <fieldset>
+            <legend>Qual horário prefere ser atendido?</legend>
+            <select>
+                <option>Manhã</option>
+                <option>Tarde</option>
+                <option>Noite</option>
+            </select>
+        </fieldset>
+        <label class="checkbox"><input type="checkbox" checked>Gostaria de receber nossas novidade por email?</label>    
+
+            <input type="submit" value="Enviar formulário" class="enviar">
 
         </form>
+        <table>
+        <thead>
+            <tr>
+                <th>Dia</th>
+                <th>Horário</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Segunda</td>
+                <td>08h ~ 20h</td>
+            </tr>
+            <tr>
+                <td>Quarta</td>
+                <td>08h ~20h</td>
+            </tr>
+            <tr>
+                <td>Sexta</td>
+                <td>08h ~20h</td>
+            </tr>
+        </tbody>
+        </table>
 
     </main>
     <footer>
         <img src="imagens/logo-branco.png">
         <p class="copy">&copy;Copyright Barbearia Alura - 2022</p>
     </footer>
+
+
+
