--- a/HTML e CSS3 _ Parte 1/index.html
+++ b/HTML e CSS3 _ Parte 1/index.html
@@ -3,15 +3,26 @@
     <head>
         <meta charset="UTF_8">
         <title>Barbearia Alura</title>
-        <link rel="stylesheet" href="style-home.css">
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
-            <h1 class="titulo_principal">Barbearia Alura</h1>
-        </header>
-        <img id = "banner" src="banner.jpg" alt="Imagem do interior de uma barbearia,contendo duas cadeiras e acessórios de trabalho">
-
-        <div class="principal">
+        <header >
+            <div class="caixa">
+                   <h1><img src="imagens/logo.png"></h1>
+                   <nav>
+                       <ul>
+                           <li><a href="index.html">home</a></li>
+                           <li ><a href="produtos.html">produtos</a></li>
+                           <li><a href="contato.html">contato</a></li>
+                       
+                       </ul>
+                   </nav>
+            </div>
+           </header>
+        <img id = "banner" src="imagens/banner.jpg" alt="Imagem do interior de uma barbearia,contendo duas cadeiras e acessórios de trabalho">
+     <main>
+        <section>
                 <h2 class="titulo_centralizado">Sobre a Barbearia Alura</h2>
 
                 <p> Localizada no coração da cidade a<strong>Barbearia Alura </strong> traz para o mercado o que há de 
@@ -23,9 +34,10 @@
                 <p> Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
                     O atendimento possui padrão de excelência e agilidade, garantindo qualidade e 
                     satisfação dos nossos clientes.</p>
-            </div>
-            <div class="beneficios">
-                <h3 class="titulo_centralizado">Benefícios</h3>
+        </section>
+
+        <section>               
+             <h3 class="titulo_centralizado">Benefícios</h3>
                 <ul>
                     <li class="itens">Atendimento aos clientes</li>
                     <li class="itens">Espaço diferenciado </li>
@@ -33,8 +45,13 @@
                     <li class="itens">Profissionais qualificados</li>
 
                 </ul>
-                <img src="beneficios.jpg" class="imagem_beneficio" alt="Imagem de um homem sentado na cadeira da barbearia, tendo sua barba cortada.">
-            </div>
+                <img src="imagens/beneficios.jpg" class="imagens/imagen.beneficios" alt="Imagem de um homem sentado na cadeira da barbearia, tendo sua barba cortada.">
+       </section>
+    </main>
+            <footer>
+                <img src="imagens/logo-branco.png">
+                <p class="copy">&copy;Copyright Barbearia Alura - 2022</p>
+            </footer>
     </body>
     
 </html>
