--- a/HTML e CSS3 _ Parte 1/index.html
+++ b/HTML e CSS3 _ Parte 1/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <meta charset="UTF_8">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
         <title>Barbearia Alura</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
     </head>
     <body>
         <header >
@@ -20,10 +22,11 @@
                    </nav>
             </div>
            </header>
-        <img id = "banner" src="imagens/banner.jpg" alt="Imagem do interior de uma barbearia,contendo duas cadeiras e acessórios de trabalho">
+        <img class = "banner" src="imagens/banner.jpg" alt="Imagem do interior de uma barbearia,contendo duas cadeiras e acessórios de trabalho">
      <main>
-        <section>
-                <h2 class="titulo_centralizado">Sobre a Barbearia Alura</h2>
+        <section class="principal">
+                <h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
+                <img class="utensilios" src="imagens/utensilios.jpg" alt="Utensílios de um barbeiro">
 
                 <p> Localizada no coração da cidade a<strong>Barbearia Alura </strong> traz para o mercado o que há de 
                     melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque
@@ -35,18 +38,30 @@
                     O atendimento possui padrão de excelência e agilidade, garantindo qualidade e 
                     satisfação dos nossos clientes.</p>
         </section>
+        <section class="mapa">
+          <h3 class="titulo-principal">Nosso estabelecimento</h3>
+          <p>Nosso estabelecimento está localizado no coração da cidade</p>
+          <div class="mapa-conteudo">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d58508.51396777688!2d-46.67800245121082!3d-23.576267361485147!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1salura%20!5e0!3m2!1spt-BR!2sbr!4v1660688614283!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+        </section>
 
-        <section>               
-             <h3 class="titulo_centralizado">Benefícios</h3>
-                <ul>
+        <section class="beneficios">               
+             <h3 class="titulo-principal">Benefícios</h3>
+            <div class="conteudo-beneficios">
+                <ul class="lista-beneficios">
                     <li class="itens">Atendimento aos clientes</li>
                     <li class="itens">Espaço diferenciado </li>
                     <li class="itens">Localização</li>
                     <li class="itens">Profissionais qualificados</li>
-
-                </ul>
-                <img src="imagens/beneficios.jpg" class="imagens/imagen.beneficios" alt="Imagem de um homem sentado na cadeira da barbearia, tendo sua barba cortada.">
-       </section>
+                    <li class="itens">Pontualidade</li>
+                    <li class="itens">Limpeza</li>
+                </ul><img class="imagem-beneficios" src="imagens/beneficios.jpg" alt="Imagem de um homem sentado na cadeira da barbearia, tendo sua barba cortada.">
+            </div>
+             <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/NLY-KS4qdCA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            </section>
     </main>
             <footer>
                 <img src="imagens/logo-branco.png">
